--- a/css/controls.css
+++ b/css/controls.css
@@ -1,3 +1,6 @@
-.calendar {
-  color: blue;
+.controls {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 20px;
 }
